--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Canvas Advent</title>
+    <title>Canvas Advent Calendar</title>
     <meta name="description" content="code advent">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type='text/javascript' src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
     <div id="header">
-      <h1>&lt;Canvas&gt; Advent</h1>
-      <p>25 days of image processing in browser using canvas API</p>
+      <h1>Canvas Advent <i class="fa fa-calendar"></i></h1>
+      <p>25 posts of image processing in browser using Canvas</p>
     </div>
     <div id="main">
-      <section class="note"><a href="./01 getting image data on canvas"><h2 class="note-title">Day 1 : Getting image data on canvas</h2></a><aside class="post-meta">posted on 2015-12-01</aside><p class="note-desc">Hi there! This will be a series of blog posts exploring image processing with browser and HTML5 `canvas` element. Before we start dive into filters and effects, let's start by looking at how image data is handled on canvas. <a href="./01 getting image data on canvas">[...]</a></p></section><section class="divider"><img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> </section>
+      <section class="note"><a href="./02"><h2 class="note-title">02: Drawing with Data</h2></a><aside class="post-meta">posted on 2015-12-02</aside><p class="note-desc">In previous post, we copied an image into 2d canvas and extracted data underneath. The result was an array of rgba values. Let's edit this data and draw something out of it. <a href="./02">[...]</a></p></section><section class="divider"><img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> </section><section class="note"><a href="./01"><h2 class="note-title">01: Getting image on canvas with 2d context</h2></a><aside class="post-meta">posted on 2015-12-01</aside><p class="note-desc">Hi there! This will be a series of blog posts exploring image processing technique with browser and HTML5 Canvas. Before we start dive into filters and effects, let's start by looking at how image data is handled on canvas. <a href="./01">[...]</a></p></section><section class="divider"><img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> <img src="/img/snow.png" alt="" class="snow"> </section>
     </div>
       {{> footer}}
     </div>
